--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1295,7 +1295,7 @@ jobs:
 
   driver-adapters-wasm:
     needs: [detect_jobs_to_run]
-    if: ${{ fromJson(needs.detect_jobs_to_run.outputs.jobs)['driver-adapters-wasm'] == true }}
+    if: contains(fromJSON(needs.detect_jobs_to_run.outputs.jobs), 'driver-adapters-wasm')
 
     timeout-minutes: 30
     strategy:
