--- a/driver-adapters-wasm/turso-vercel-nextjs-edgemw/package.json
+++ b/driver-adapters-wasm/turso-vercel-nextjs-edgemw/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.3.5",
-    "@prisma/adapter-libsql": "^5.0.0",
+    "@prisma/adapter-libsql": "5.7.0-dev.70",
     "@prisma/client": "5.7.0-dev.70",
     "next": "14.0.3",
     "node-fetch": "2.7.0",
