--- a/driver-adapters/turso-vercel-nextjs/package.json
+++ b/driver-adapters/turso-vercel-nextjs/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.3.5",
-    "@prisma/adapter-libsql": "^5.0.0",
+    "@prisma/adapter-libsql": "5.7.0-dev.77",
     "@prisma/client": "5.7.0-dev.77",
     "next": "14.0.3",
     "node-fetch": "2.7.0",
