test: add AWS Lambda node20.x

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -814,14 +814,14 @@ jobs:
         clientEngine: [library] #['library', 'binary']
         os: [ubuntu-20.04] #, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
-    
+
     env:
-    # We set this env var to avoid the following error in `actions/setup-node`
-    # error This project's package.json defines "packageManager": "yarn@3.7.0". However the current global version of Yarn is 1.22.21.
-    # it was added in https://github.com/yarnpkg/yarn/releases/tag/v1.22.20
-    # and the env var is available since https://github.com/yarnpkg/yarn/releases/tag/v1.22.21
+      # We set this env var to avoid the following error in `actions/setup-node`
+      # error This project's package.json defines "packageManager": "yarn@3.7.0". However the current global version of Yarn is 1.22.21.
+      # it was added in https://github.com/yarnpkg/yarn/releases/tag/v1.22.20
+      # and the env var is available since https://github.com/yarnpkg/yarn/releases/tag/v1.22.21
       SKIP_YARN_COREPACK_CHECK: 1
-      
+
     steps:
       - uses: actions/checkout@v4
 
@@ -1009,7 +1009,8 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - lambda
+          - lambda-node-16
+          - lambda-node-20
           - netlify-cli
           - netlify-github
           - netlify-github-with-nextjs-caching
@@ -1352,7 +1353,7 @@ jobs:
       # settings
       DEBUG: 'prisma:js-connector*'
       PRISMA_DISABLE_QUAINT_EXECUTORS: true
-    
+
     steps:
       - uses: actions/checkout@v4
 
