feat: driver-adapters-wasm/pg-cfpages-basic
First steps to make it run on Cf Pages

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1306,6 +1306,7 @@ jobs:
           - pg-node-basic
           - pg-node-basic-esm
           - pg-cf-basic
+          - pg-cfpages-basic
           - neon-http-cf-basic
           - neon-http-vercel-nextjs-edgemw
           - neon-cf-basic
