demo project that shows we can deploy to cfpages

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1303,6 +1303,7 @@ jobs:
       fail-fast: false
       matrix:
         combo:
+          - demo-cfpages-basic
           - pg-node-basic
           - pg-node-basic-esm
           - pg-cf-basic
