add planetscale cfpages to CI

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1316,6 +1316,7 @@ jobs:
           - neon-vercel-nextjs-pages-edgefn
           - neon-vercel-nextjs-app-edgefn
           - planetscale-cf-basic
+          - planetscale-cfpages-basic
           - planetscale-vercel-nextjs-edgemw
           - turso-cf-basic
           - turso-vercel-nextjs-edgemw
@@ -1346,6 +1347,7 @@ jobs:
       DRIVER_ADAPTERS_NEON_NODE_NEXTJS_EDGEMW_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_NODE_NEXTJS_EDGEMW_DATABASE_URL }}
       # planetscale
       DRIVER_ADAPTERS_PLANETSCALE_CF_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_CF_BASIC_DATABASE_URL }}
+      DRIVER_ADAPTERS_PLANETSCALE_CFPAGES_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_CFPAGES_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_EDGEMW_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_EDGEMW_DATABASE_URL }}
       DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_EDGEMW_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_PLANETSCALE_VERCEL_NEXTJS_EDGEMW_PROJECT_ID }}
       # Turso
