fix package names
(cherry picked from commit e07c69f86b1797f2ebff50a92bf408b9a4530443)

--- a/community-generators/prisma-json-schema-generator/package.json
+++ b/community-generators/prisma-json-schema-generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prisma-dbml-generator",
+  "name": "prisma-json-schema-generator",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
