--- a/databases-macos/sqlserver-azure-sql/package.json
+++ b/databases-macos/sqlserver-azure-sql/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sqlserver-azure-sql",
+  "name": "macos-sqlserver-azure-sql",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
