--- a/dataproxy/vercel-cli-serverless-functions/package.json
+++ b/dataproxy/vercel-cli-serverless-functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vercel-cli",
+  "name": "vercel-cli-serverless-functions",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
