--- a/packagers/pnpm-workspaces-custom-output/package.json
+++ b/packagers/pnpm-workspaces-custom-output/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "script",
+  "name": "pnpm-workspaces-custom-output",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "16.18.68",
