--- a/platforms-serverless/gcp-functions/package.json
+++ b/platforms-serverless/gcp-functions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "script",
+  "name": "gcp-functions",
   "license": "MIT",
   "scripts": {
     "gcp-build": "CI=1 && PRISMA_TELEMETRY_INFORMATION='ecosystem-tests platforms/gcp-functions postinstall' && npx prisma generate"
