--- a/bundlers/webpack-browser-custom-output/package.json
+++ b/bundlers/webpack-browser-custom-output/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack",
+  "name": "webpack-browser-custom-output",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
