--- a/core-features/generate-client-install-npm/package.json
+++ b/core-features/generate-client-install-npm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generate-client-install",
+  "name": "generate-client-install-npm",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
