--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1311,6 +1311,7 @@ jobs:
           - neon-http-cf-basic
           - neon-http-vercel-nextjs-edgemw
           - neon-cf-basic
+          - neon-cfpages-basic
           - neon-node-nextjs-edgemw
           - neon-vercel-nextjs-edgemw
           - neon-vercel-nextjs-pages-edgefn
@@ -1319,6 +1320,7 @@ jobs:
           - planetscale-cfpages-basic
           - planetscale-vercel-nextjs-edgemw
           - turso-cf-basic
+          - turso-cfpages-basic
           - turso-vercel-nextjs-edgemw
         clientEngine: ['wasm']
         os: [ubuntu-20.04]
@@ -1338,6 +1340,7 @@ jobs:
       DRIVER_ADAPTERS_NEON_HTTP_VERCEL_NEXTJS_EDGEMW_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_NEON_HTTP_VERCEL_NEXTJS_EDGEMW_PROJECT_ID }}
       # neon
       DRIVER_ADAPTERS_NEON_CF_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_CF_BASIC_DATABASE_URL }}
+      # DRIVER_ADAPTERS_NEON_CFPAGES_BASIC_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_CFPAGES_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_EDGEMW_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_EDGEMW_DATABASE_URL }}
       DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_EDGEMW_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_EDGEMW_PROJECT_ID }}
       DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_PAGES_EDGEFN_DATABASE_URL: ${{ secrets.DRIVER_ADAPTERS_NEON_VERCEL_NEXTJS_PAGES_EDGEFN_DATABASE_URL }}
@@ -1353,6 +1356,8 @@ jobs:
       # Turso
       DRIVER_ADAPTERS_TURSO_CF_BASIC_DATABASE_URL: ${{ vars.DRIVER_ADAPTERS_TURSO_CF_BASIC_DATABASE_URL }}
       DRIVER_ADAPTERS_TURSO_CF_BASIC_TOKEN: ${{ secrets.DRIVER_ADAPTERS_TURSO_CF_BASIC_TOKEN }}
+      # DRIVER_ADAPTERS_TURSO_CFPAGES_BASIC_DATABASE_URL: ${{ vars.DRIVER_ADAPTERS_TURSO_CFPAGES_BASIC_DATABASE_URL }}
+      # DRIVER_ADAPTERS_TURSO_CFPAGES_BASIC_TOKEN: ${{ secrets.DRIVER_ADAPTERS_TURSO_CFPAGES_BASIC_TOKEN }}
       DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_DATABASE_URL: ${{ vars.DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_DATABASE_URL }}
       DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_TOKEN: ${{ secrets.DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_TOKEN }}
       DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_PROJECT_ID: ${{ vars.DRIVER_ADAPTERS_TURSO_VERCEL_NEXTJS_EDGEMW_PROJECT_ID }}
