--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -991,6 +991,7 @@ jobs:
           echo "DATABASE_URL=$replaced" >> $GITHUB_ENV
 
       - name: Set up WireGuard
+        if: ${{ matrix.platform == 'm1-office' }}
         run: |
           sudo apt install openresolv
           ln -s /usr/bin/resolvectl /usr/local/bin/resolvconf
