--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -990,16 +990,19 @@ jobs:
           replaced=${string/$search/$replace}
           echo "DATABASE_URL=$replaced" >> $GITHUB_ENV
 
-      - name: Set up WireGuard
+      - name: 'Set up WireGuard ...'
         if: ${{ matrix.platform == 'm1-office' }}
         run: |
-          sudo apt install openresolv
-          ln -s /usr/bin/resolvectl /usr/local/bin/resolvconf
-          sudo apt install wireguard
-          echo "${{ secrets.WG_CONFIG_FILE }}" > wg0.conf
-          sudo chmod 600 wg0.conf
-          echo "setting config"
-          sudo wg-quick up ./wg0.conf
+          echo "🔒 Install WireGuard & friends..."
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends wireguard-tools openresolv
+          echo "🔐 Configure WireGuard tunnel..."
+          echo "${{ secrets.WG_CONFIG_FILE }}" > /etc/wireguard/wg0.conf
+          sudo chmod 600 /etc/wireguard/wg0.conf
+          sudo wg-quick up wg0
+          echo "🩻 Check IPv4 routes..."
+          sudo ip -4 route list
+          echo "🩻 Check DNS resolution..."
+          sudo resolvconf -v
 
       - name: test ${{ matrix.platform }} - ${{ matrix.clientEngine }}
         id: run-test
