--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -995,12 +995,18 @@ jobs:
         run: |
           echo "🔒 Install WireGuard & friends..."
           sudo DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends wireguard-tools openresolv
+
           echo "🔐 Configure WireGuard tunnel..."
           echo "${{ secrets.WG_CONFIG_FILE }}" > /etc/wireguard/wg0.conf
           sudo chmod 600 /etc/wireguard/wg0.conf
+          sudo ls -la /etc/wireguard/wg0.conf
+
+          echo "wg-quick up..."
           sudo wg-quick up wg0
+
           echo "🩻 Check IPv4 routes..."
           sudo ip -4 route list
+
           echo "🩻 Check DNS resolution..."
           sudo resolvconf -v
 
