--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -997,7 +997,7 @@ jobs:
           sudo DEBIAN_FRONTEND=noninteractive apt-get install -yq --no-install-recommends wireguard-tools openresolv
 
           echo "🔐 Configure WireGuard tunnel..."
-          echo "${{ secrets.WG_CONFIG_FILE }}" > /etc/wireguard/wg0.conf
+          printf "${{ secrets.WG_CONFIG_FILE }}" | sudo tee /etc/wireguard/wg0.conf
           sudo chmod 600 /etc/wireguard/wg0.conf
           sudo ls -la /etc/wireguard/wg0.conf
 
