--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -949,6 +949,7 @@ jobs:
       SSH_KEY_GRAVITON: ${{ secrets.SSH_KEY_GRAVITON }}
       SSH_KEY_M1_MACSTADIUM: ${{ secrets.SSH_KEY_M1_MACSTADIUM }}
       # TODO
+      MACHINE_SECRET: ${{ secrets.OFFICE_STUDIO_SSH_SECRET }}
 
     steps:
       - uses: actions/checkout@v4
