--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1512,6 +1512,7 @@ jobs:
 
       # see above why this is not a matrix for each DP variant
       - name: test legacy Data Proxy (DP1) ${{ matrix.platform }}
+        if: false
         uses: nick-invision/retry@v2
         with:
           timeout_minutes: 15
