--- a/driver-adapters/tidb-node-basic/package.json
+++ b/driver-adapters/tidb-node-basic/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.8.0-dev.24",
-    "@tidbcloud/prisma-adapter": "5.7.0",
-    "@tidbcloud/serverless": "0.0.8"
+    "@tidbcloud/prisma-adapter": "5.8.0-dev.15",
+    "@tidbcloud/serverless": "0.0.9"
   }
 }
