--- a/platforms-serverless/gcp-functions/package.json
+++ b/platforms-serverless/gcp-functions/package.json
@@ -2,7 +2,7 @@
   "name": "gcp-functions",
   "license": "MIT",
   "scripts": {
-    "gcp-build": "CI=1 && PRISMA_TELEMETRY_INFORMATION='ecosystem-tests platforms/gcp-functions postinstall' && npx prisma -v && npx prisma generate"
+    "gcp-build": "CI=1 && PRISMA_TELEMETRY_INFORMATION='ecosystem-tests platforms/gcp-functions postinstall' && npx prisma debug && npx prisma -v && npx prisma generate"
   },
   "devDependencies": {
     "prisma": "5.8.0-dev.50",
