--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -276,6 +276,7 @@ jobs:
           - debian-bullseye-amd64-openssl-1.1.x-tls
           - debian-buster-amd64-openssl-1.1.x
           - debian-latest-amd64-openssl-3.0.x
+          - debian-latest-amd64-openssl-3.0.x-tls
           - debian-latest-arm64-openssl-3.0.x
           - debian-stretch-amd64-openssl-1.1.x
           - opensuse-tumbleweed-amd64-openssl-3.0.x
