fix cache-dependency-path & dir

--- a/.github/workflows/optional-test.yaml
+++ b/.github/workflows/optional-test.yaml
@@ -131,7 +131,7 @@ jobs:
         with:
           node-version: 16
           cache: 'pnpm'
-          cache-dependency-path: platforms/${{ matrix.generator }}/pnpm-lock.yaml
+          cache-dependency-path: ${{ github.job }}/${{ matrix.generator }}/pnpm-lock.yaml
 
       - name: Install Dependencies
         run: pnpm install
@@ -256,7 +256,7 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
-          cache-dependency-path: ${{ github.job }}/${{ matrix.platform }}/pnpm-lock.yaml
+          cache-dependency-path: platforms/${{ matrix.platform }}/pnpm-lock.yaml
 
       - name: Define Client Engine Type to test
         run: echo "PRISMA_CLIENT_ENGINE_TYPE=${{ matrix.clientEngine }}" >> $GITHUB_ENV
