test(driver-adapters-wasm): exports map (#4471)

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "fetch-retry": "pnpm exec ts-node utils/fetch-retry-and-confirm-version.ts",
     "update-ci": "scripts/update-ci.sh",
     "update-all": "scripts/update-all.sh",
-    "update-project": "scripts/update-project.sh"
+    "update-project": "scripts/update-project.sh",
+    "reset-lockfiles": "git restore --source=origin/dev 'pnpm-lock.yaml'; git restore --source=origin/dev 'yarn.lock'; git restore --source=origin/dev 'package-lock.json'; git restore --source=origin/dev 'prisma-version.txt'",
+    "reset-json-and-lockfiles": "pnpm reset-lockfiles; git restore --source=origin/dev '*.json'"
   }
 }
