--- a/packagers/yarn3-workspaces-pnp/packages/sub-project-1/package.json
+++ b/packagers/yarn3-workspaces-pnp/packages/sub-project-1/package.json
@@ -3,6 +3,7 @@
   "name": "sub-project-1",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "packageManager": "yarn@3.7.0",
   "devDependencies": {
     "@types/node": "16.18.70",
     "prisma": "5.9.0-dev.34",
