--- a/packagers/yarn3-workspaces-pnp/packages/sub-project-2/package.json
+++ b/packagers/yarn3-workspaces-pnp/packages/sub-project-2/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "sub-project-2",
+  "packageManager": "yarn@3.7.0",
   "dependencies": {
     "sub-project-1": "workspace:packages/sub-project-1"
   },
