--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1259,13 +1259,23 @@ jobs:
           replaced=${string/$search/$replace}
           echo "DATABASE_URL=$replaced" >> $GITHUB_ENV
 
-      - name: test ${{ matrix.combo }} - ${{ matrix.clientEngine }}
+      - name: test ${{ matrix.combo }} - ${{ matrix.clientEngine }} (default output)
         uses: nick-invision/retry@v2
         with:
           timeout_minutes: 60
           max_attempts: 1
           retry_wait_seconds: 30
           command: bash .github/scripts/test-project.sh ${{ github.job }} ${{ matrix.combo }}
+
+      - name: test ${{ matrix.combo }} - ${{ matrix.clientEngine }} (custom output)
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 60
+          max_attempts: 1
+          retry_wait_seconds: 30
+          command: |
+            export FORCE_CUSTOM_OUTPUT=1
+            bash .github/scripts/test-project.sh ${{ github.job }} ${{ matrix.combo }}
 
       - name: notify-slack
         if: failure()
@@ -1368,7 +1378,7 @@ jobs:
           replaced=${string/$search/$replace}
           echo "DATABASE_URL=$replaced" >> $GITHUB_ENV
 
-      - name: test ${{ matrix.combo }} - ${{ matrix.clientEngine }} - (default output)
+      - name: test ${{ matrix.combo }} - ${{ matrix.clientEngine }} (default output)
         uses: nick-invision/retry@v2
         with:
           timeout_minutes: 60
@@ -1376,7 +1386,7 @@ jobs:
           retry_wait_seconds: 30
           command: bash .github/scripts/test-project.sh ${{ github.job }} ${{ matrix.combo }}
 
-      - name: test ${{ matrix.combo }} - ${{ matrix.clientEngine }} - (custom output)
+      - name: test ${{ matrix.combo }} - ${{ matrix.clientEngine }} (custom output)
         uses: nick-invision/retry@v2
         with:
           timeout_minutes: 60
