Fix neon-vercel test
Project had no dependency on @neondatabase/serverless.

--- a/driver-adapters/neon-vercel-nextjs/package.json
+++ b/driver-adapters/neon-vercel-nextjs/package.json
@@ -16,6 +16,7 @@
     "vercel": "32.3.1"
   },
   "dependencies": {
+    "@neondatabase/serverless": "0.7.2",
     "@prisma/adapter-neon": "5.9.0-dev.39",
     "@prisma/client": "5.9.0-dev.39",
     "next": "14.1.0",
