--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1308,6 +1308,8 @@ jobs:
           - turso-cf-basic
           - turso-cfpages-basic
           - turso-vercel-nextjs-edgemw
+          - d1-cf-basic
+          - d1-cfpages-basic
         clientEngine: ['wasm']
         os: [ubuntu-20.04]
     runs-on: ${{ matrix.os }}
